--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,10 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "moduleResolution": "nodenext",
+    "outDir": "./dist",
+    "rootDir": "./src",
   },
   "include": ["src/**/*"]
 }
